--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "generator-angular",
+  "name": "generator-angular-pr",
   "version": "0.15.1",
   "description": "Yeoman generator for AngularJS",
   "keywords": [
